<resources>
    <string name="app_name">Popular Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="api_key" translatable="false" >xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="title_label">Title</string>
    <string name="vote_average_label">Vote Average</string>
    <string name="popularity_label">Popularity</string>
    <string name="overview_label">Overview</string>
    <string name="release_date_label">Release Date</string>
    <string name="adult_label">Adult</string>
    <string name="detail_error_message">data not available</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="check_network">Please check your network</string>
    <string name="server_unavailable">Server is currently unavailable. Please try again later</string>
    <string name="data_unavailable">Data unavailable</string>

    <string name="pref_sort_order_label" translatable="false">SORTORDER</string>
    <string name="pref_sort_order_key" translatable="false">SORTORDER</string>
    <string name="pref_sort_order_default" translatable="false">mostpopular</string>

</resources>
