<?xml version="1.0" encoding="utf-8"?>

<!-- Master layout. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_gravity="left"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
       >
        <ImageView
            android:id="@+id/backdrop_detail_movie"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/noposterdetail780"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/tendp"
                android:layout_weight="7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/title_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/fivedp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vote_average_label"
                            android:textStyle="bold"
                            android:layout_marginRight="@dimen/tendp"/>
                        <TextView
                            android:id="@+id/vote_average_movie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/fivedp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popularity_label"
                        android:textStyle="bold"
                        android:layout_marginRight="@dimen/tendp"/>
                    <TextView
                        android:id="@+id/popularity_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/fivedp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adult_label"
                        android:textStyle="bold"
                        android:layout_marginRight="@dimen/tendp"/>
                    <TextView
                        android:id="@+id/adulte_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/fivedp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date_label"
                        android:textStyle="bold"
                        android:layout_marginRight="@dimen/tendp"/>
                    <TextView
                        android:id="@+id/release_date_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/poster_detail_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/noposter92"/>

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/tendp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview_label"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/fivedp"/>
            <TextView
                android:id="@+id/overview_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
